src/objects/Instruments__c.object
<CustomObject>
    <description>Is used to store the installed base of Essilor products</description>
    <fields>
        <fullName>Competitor_Contract_End_Date__c</fullName>
        <label>Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Instruments</relationshipLabel>
        <relationshipName>Instruments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Essilor_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Essilor Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Instruments</relationshipLabel>
        <relationshipName>Instruments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing_End__c</fullName>
        <label>Financing (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Start__c</fullName>
        <label>Financing (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Month__c</fullName>
        <description>Aufbau Monat</description>
        <label>Installation Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Year__c</fullName>
        <label>Installation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Value__c</fullName>
        <label>Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Last reading of counter</description>
        <inlineHelpText>Letzter Zählerstand</inlineHelpText>
        <label>Last Inspection Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr__c</fullName>
        <description>Instrument Number</description>
        <label>Serial Nr.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nr_of_edged_Lenses__c</fullName>
        <label>Nr. of edged Lenses</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Instruments</relationshipLabel>
        <relationshipName>Instruments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lens Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projection_p_a__c</fullName>
        <description>Calculated counter per year</description>
        <inlineHelpText>Hochrechnung p.a.</inlineHelpText>
        <label>Projection p.a.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Removal_Date__c</fullName>
        <label>Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Removal_Month__c</fullName>
        <label>Removal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Year__c</fullName>
        <label>Removal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Essilor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nika</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Automat</description>
        <inlineHelpText>Automaten Typ</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phoropter Reichert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesegerät</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstiges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Production__c</fullName>
        <label>Production Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Instruments</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Nr__c</columns>
        <columns>Customer__c</columns>
        <columns>Installation_Month__c</columns>
        <columns>Installation_Year__c</columns>
        <columns>Removal_Month__c</columns>
        <columns>Removal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Instrument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instruments</pluralLabel>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>Competitor Instruments</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Essilor</fullName>
        <active>true</active>
        <description>Instruments Essilor</description>
        <label>Essilor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nautilus</fullName>
        <active>true</active>
        <description>Nautilus</description>
        <label>Nautilus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visioffice</fullName>
        <active>true</active>
        <description>Visioffice Vertrag</description>
        <label>Visioffice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>